Bug 1602313 - Make nsHttpChannel::mCachedContentIsValid an atomic bool, r=kershaw

Differential Revision: https://phabricator.services.mozilla.com/D60877